--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  background: url(todo.jpg);
+  background-size: cover;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  display: grid;
+  place-items: center;
   }
-  to {
-    transform: rotate(360deg);
+
+input {
+  display: block;
+  width: 90%;
+  border: none;
+  color:azure;
+  font-size: 20px;
+  background:#82D4FB;
+  padding: 20px;
+  font-family: 'Cormorant Infant', serif;
+  margin-bottom: 20px;
   }
-}
+
+  button {
+    padding: 20px 50px 20px 70px;
+    background-color: #EC7163;
+    color: white;
+    font-size: 20px;
+    font-family: 'Cormorant Infant', serif;
+    cursor: pointer;
+    border: none;
+  
+     }
+     p {
+      max-width: 100%;
+      background: #AF7AC5;
+      margin-top: 20px;
+      font-family: 'Cormorant Infant', serif;
+      width: 400px;
+      font-size: 20px;
+      color:antiquewhite;
+      
+      }
